Fix overflow on purchase date list

--- a/apps/web/src/styles/context-menu.scss
+++ b/apps/web/src/styles/context-menu.scss
@@ -3,8 +3,13 @@
   li,
   .v-contextmenu-group__menus {
     padding: 0 !important;
-  }
 
+  .v-contextmenu-submenu__menus {
+    max-height: 100vh;
+    overflow-y: auto;
+    position: absolute;
+    }
+  }
   :deep(.copies-tabs) {
     position: initial;
     display: flex;
